--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuexy-mui-nextjs-admin-template",
+  "name": "kpu-sulsel dashboard",
   "version": "3.0.0",
   "license": "Commercial",
   "private": true,
@@ -30,7 +30,8 @@
     "react-dom": "18.3.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-use": "17.5.0",
-    "server-only": "0.0.1"
+    "server-only": "0.0.1",
+    "serverless-mysql": "^1.5.5"
   },
   "devDependencies": {
     "@iconify/json": "2.2.218",
