--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mui/material-nextjs": "5.15.11",
     "apexcharts": "^3.52.0",
     "classnames": "2.5.1",
+    "mysql2": "^3.11.0",
     "next": "14.2.4",
+    "next-connect": "^1.0.0",
     "react": "18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-colorful": "5.6.1",
