--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.0",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
@@ -21,17 +22,25 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.20",
     "@mui/material-nextjs": "5.15.11",
+    "@prisma/client": "^5.19.1",
     "apexcharts": "^3.52.0",
     "classnames": "2.5.1",
+    "keen-slider": "^6.8.6",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-connect": "^1.0.0",
+    "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-colorful": "5.6.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "18.3.1",
     "react-perfect-scrollbar": "1.5.8",
+    "react-player": "^2.16.0",
+    "react-toastify": "^10.0.5",
     "react-use": "17.5.0",
+    "recharts": "^2.12.7",
     "server-only": "0.0.1",
     "serverless-mysql": "^1.5.5"
   },
