--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kpu-sulsel dashboard",
+  "name": "kpu-sulsel-dashboard",
   "version": "3.0.0",
   "license": "Commercial",
   "private": true,
