--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "build:icons": "tsx src/assets/iconify-icons/bundle-icons-css.js",
-    "postinstall": "prisma generate"
+    "postinstall": "npm run build:icons"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
