--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "5.15.20",
     "@mui/material-nextjs": "5.15.11",
     "@prisma/client": "^5.19.1",
+    "@tabler/icons-react": "^3.21.0",
     "apexcharts": "^3.52.0",
     "classnames": "2.5.1",
     "keen-slider": "^6.8.6",
